--- a/src/locales/en/docs.json
+++ b/src/locales/en/docs.json
@@ -35,6 +35,7 @@
           "buttons": "Buttons",
           "cards": "Cards",
           "forms-input": "Forms & Input",
+          "number-input": "Number Input",
           "nav-header": "Nav — Header",
           "nav-sidebar": "Nav — Sidebar",
           "nav-tabs": "Nav — Tabs",
