--- a/src/locales/id/docs.json
+++ b/src/locales/id/docs.json
@@ -35,6 +35,7 @@
           "buttons": "Tombol",
           "cards": "Kartu",
           "forms-input": "Form & Input",
+          "number-input": "Input Angka",
           "nav-header": "Nav — Header",
           "nav-sidebar": "Nav — Sidebar",
           "nav-tabs": "Nav — Tab",
